# ======================================================================================
#
#  ██╗     ███████╗███╗   ███╗ ██████╗ ███╗   ██╗███████╗
#  ██║     ██╔════╝████╗ ████║██╔═══██╗████╗  ██║██╔════╝
#  ██║     █████╗  ██╔████╔██║██║   ██║██╔██╗ ██║███████╗
#  ██║     ██╔══╝  ██║╚██╔╝██║██║   ██║██║╚██╗██║╚════██║
#  ███████╗███████╗██║ ╚═╝ ██║╚██████╔╝██║ ╚████║███████║
#  ╚══════╝╚══════╝╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═══╝╚══════╝
#
#  This file is part of the Lemons open source library and is licensed under the terms of the GNU Public License.
#
# ======================================================================================

add_subdirectory (intervals)
add_subdirectory (scales)

target_sources (
	limes_music
	PRIVATE PitchClass.cpp
			PitchClass.h
			Pitch.cpp
			Pitch.h
			Chord.cpp
			Chord.h
			PitchUtils.h)

target_include_directories (limes_core PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
